--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style>
 		body
 		{ 
-			background-image:url('leonardo.png');
+			background-image:url('img/leonardo.png');
 			background-repeat:no-repeat;
 			background-attachment:fixed;
 			background-position:center; 
