added icons and sections

--- a/index-eng.html
+++ b/index-eng.html
@@ -70,7 +70,7 @@
                         
                         <img src="./img/bottega52logo.png" width="128px">
                         <h2></h2>
-                        <p class="intro-text">"Appare chiaro che Leonardo fosse intenzionato a restare a Milano, città che doveva affascinarlo per la sua apertura alle novità scientifiche e tecnologiche." </p> <P><i>Scritti Letterari, <b>Leonardo da Vinci</b></i></p>
+                        <p class="intro-text">"It seems clear that Leonardo was determined to stay in Milan, a city that had fascinated him for his openness to new scientific and technological.." </p> <P><i>Scritti Letterari, <b>Leonardo da Vinci</b></i></p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
