--- a/index2.html
+++ b/index2.html
@@ -95,20 +95,24 @@
                     
                     <img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="./img/riccardo.png">
                     <h4></h4>
-                    <h4 class="service-heading">Riccardo CATTANEO</h4>
-                    <p class="text-muted">Dottorando in Ingegneria Informatica al Politecnico di Milano. Si occupa di progettazione hardware e software.</p>
+                    <h4 class="service-heading">Riccardo CATTANEO<br><small>PhD Candidate in Computer Engineering</small></h4>
+                    <p class="text-muted"><small>Hardware Design and Image Vision</small></p>
+                    <h6 class="service-heading">[ <a href="https://www.linkedin.com/profile/view?id=104449586&authType=NAME_SEARCH&authToken=-ek8&locale=it_IT&trk=tyah2&trkInfo=idx%3A1-1-1%2CtarId%3A1424262258695%2Ctas%3Ariccardo+">LINKEDIN</a> ]</h6>
                 </div>
                 <div class="col-md-4">
                     <img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="http://matteo.ferroni.me/img/me.jpg">
                     <h4></h4>
-                    <h4 class="service-heading">Matteo FERRONI</h4>
-                    <p class="text-muted">Dottorando in Ingegneria Informatica al Politecnico di Milano. Si occupa di progettazione di sistemi mobili e pervasivi.</p>
+                    <h4 class="service-heading">Matteo FERRONI<br><small>PhD Candidate in Computer Engineering</small></h4>
+                    <p class="text-muted"><small>Android Apps and Backends</small></p>
+                    <h6 class="service-heading">[ <a href="https://www.linkedin.com/profile/view?id=170701079&authType=NAME_SEARCH&authToken=_UON&locale=it_IT&trk=tyah2&trkInfo=idx%3A1-1-1%2CtarId%3A1424262283639%2Ctas%3Amatteo+ferroni">LINKEDIN</a> ]</h6>
                 </div>
                 <div class="col-md-4">
                     <img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 120px; height: 140px;" src="http://www.alessandronacci.it/images/personal_photo.jpg">
                     <h4></h4>
-                    <h4 class="service-heading">Alessandro NACCI</h4>
-                    <p class="text-muted">Dottorando in Ingegneria Informatica al Politecnico di Milano. Si occupa di smart buildings e sistemi mobili.</p>
+                    <h4 class="service-heading">Alessandro NACCI<br><small>PhD Candidate in Computer Engineering</small></h4>
+                    <p class="text-muted"><small>iOS Apps and Embedded Systems</small></p>
+                    <h6 class="service-heading">[ <a href="https://www.linkedin.com/profile/view?id=73183102&authType=NAME_SEARCH&authToken=EXuX&locale=it_IT&trk=tyah2&trkInfo=idx%3A1-1-1%2CtarId%3A1424262267892%2Ctas%3Aalessandro">LINKEDIN</a> ]</h6>
+
                 </div>
             </div>
         </div>
@@ -140,63 +144,75 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <a href="#virtual_augmented_reality" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    <i class="fa fa-search-plus fa-2x">
+                                    	<p>Virtual & Augmented Reality</p>
+                                    </i>                                   
                                 </div>
                             </div>
-                            <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                            <img src="img/portfolio/augumented-reality.png" class="img-responsive" alt="">
                         </a>
                     </div>
                     <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <a href="#proximity" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    <i class="fa fa-search-plus fa-2x">
+                                    	<p>Proximity & Indoor Localization</p>
+                                    </i>                                   
                                 </div>
                             </div>
-                            <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                            <img src="img/portfolio/proximity.png" class="img-responsive" alt="">
                         </a>
                     </div>
                     <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <a href="#mobileapps" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    <i class="fa fa-search-plus fa-2x">
+                                    	<p>Mobile Apps</p>
+                                    </i>                                   
                                 </div>
                             </div>
-                            <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                            <img src="img/portfolio/mobile.png" class="img-responsive" alt="">
                         </a>
                     </div>
                     <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <a href="#iot" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    <i class="fa fa-search-plus fa-2x">
+                                    	<p>Internet-Of-Things</p>
+                                    </i>                                   
                                 </div>
                             </div>
-                            <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                            <img src="img/portfolio/embedded-systems.png" class="img-responsive" alt="">
                         </a>
                     </div>
                     <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <a href="#analytics" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    <i class="fa fa-search-plus fa-2x">
+                                    	<p>Analytics</p>
+                                    </i>                                   
                                 </div>
                             </div>
-                            <img src="img/portfolio/safe.png" class="img-responsive" alt="">
+                            <img src="img/portfolio/analytics.png" class="img-responsive" alt="">
                         </a>
                     </div>
                     <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <a href="#marketing" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    <i class="fa fa-search-plus fa-2x">
+                                    	<p>Marketing Technologies</p>
+                                    </i>                                   
                                 </div>
                             </div>
-                            <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                            <img src="img/portfolio/marketing.png" class="img-responsive" alt="">
                         </a>
                     </div>
                 </div>
@@ -223,7 +239,7 @@
     </section>
 
     <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="virtual_augmented_reality" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -235,9 +251,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Virtual & Augmented Reality</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/augumented-reality.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -260,7 +276,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="proximity" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -272,9 +288,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Proximity & Indoor Localization</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/proximity.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -297,7 +313,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="mobileapps" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -309,9 +325,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Mobile Apps</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/mobile.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -334,7 +350,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="iot" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -346,9 +362,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Internet-Of-Things</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/embedded-systems.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -371,7 +387,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="analytics" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -383,9 +399,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Analytics</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/analytics.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -408,7 +424,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="marketing" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -420,9 +436,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Marketing Technologies</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/marketing.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
