about us section is now ok

--- a/index2.html
+++ b/index2.html
@@ -71,39 +71,65 @@
       </div>
    </header>
    <!-- Chi Siamo Section -->
-   <section id="about">
-      <div class="container whoweare">
-         <div class="row">
-            <div class="col-lg-12 text-center">
-               <h2 class="section-heading">Chi siamo</h2>
-               <h3 class="section-subheading text-muted"></h3>
+
+   <section id="portfolio" class="portfolio-section">
+      <div class="container">
+         <div class=" text-center">
+            <div class="row">
+               <div class="col-lg-12 text-center">
+                  <h2>Chi Siamo</h2>
+               </div>
             </div>
-         </div>
-         <div class="row text-center">
-            <div class="col-md-4">
-               <img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="./img/riccardo.png">
-               <h4></h4>
-               <h4 class="service-heading">Riccardo CATTANEO<br><small>PhD Candidate in Computer Engineering</small></h4>
-               <p class="text-muted"><small>Hardware Design and Image Vision</small></p>
-               <h6 class="service-heading">[ <a href="https://www.linkedin.com/profile/view?id=104449586&authType=NAME_SEARCH&authToken=-ek8&locale=it_IT&trk=tyah2&trkInfo=idx%3A1-1-1%2CtarId%3A1424262258695%2Ctas%3Ariccardo+">LINKEDIN</a> ]</h6>
-            </div>
-            <div class="col-md-4">
-               <img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="http://matteo.ferroni.me/img/me.jpg">
-               <h4></h4>
-               <h4 class="service-heading">Matteo FERRONI<br><small>PhD Candidate in Computer Engineering</small></h4>
-               <p class="text-muted"><small>Android Apps and Backends</small></p>
-               <h6 class="service-heading">[ <a href="https://www.linkedin.com/profile/view?id=170701079&authType=NAME_SEARCH&authToken=_UON&locale=it_IT&trk=tyah2&trkInfo=idx%3A1-1-1%2CtarId%3A1424262283639%2Ctas%3Amatteo+ferroni">LINKEDIN</a> ]</h6>
-            </div>
-            <div class="col-md-4">
-               <img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 120px; height: 140px;" src="http://www.alessandronacci.it/images/personal_photo.jpg">
-               <h4></h4>
-               <h4 class="service-heading">Alessandro NACCI<br><small>PhD Candidate in Computer Engineering</small></h4>
-               <p class="text-muted"><small>iOS Apps and Embedded Systems</small></p>
-               <h6 class="service-heading">[ <a href="https://www.linkedin.com/profile/view?id=73183102&authType=NAME_SEARCH&authToken=EXuX&locale=it_IT&trk=tyah2&trkInfo=idx%3A1-1-1%2CtarId%3A1424262267892%2Ctas%3Aalessandro">LINKEDIN</a> ]</h6>
+            <div class="row">
+
+               <div class="col-sm-4 portfolio-item">
+                  <a class="portfolio-link" data-toggle="modal">
+                     <div class="caption">
+                        <div class="caption-content">
+                        	<i>Electronic Design & <br> Image Vision</i>
+                        </div>
+                     </div>
+                     <img src="img/riccardoCattaneo.png" class="img-responsive" alt="">
+                     <h4 class="service-heading">Riccardo CATTANEO<br><small>PhD Candidate in Computer Engineering</small></h4>
+                  </a>
+				  <h6 class="service-heading">[ <a href="https://www.linkedin.com/profile/view?id=73183102&authType=NAME_SEARCH&authToken=EXuX&locale=it_IT&trk=tyah2&trkInfo=idx%3A1-1-1%2CtarId%3A1424262267892%2Ctas%3Aalessandro">LINKEDIN</a> ]</h6>
+               </div>
+
+               <div class="col-sm-4 portfolio-item">
+                  <a class="portfolio-link" data-toggle="modal">
+                     <div class="caption">
+                        <div class="caption-content">
+                        	<i>Android Apps & Backends</i>
+                        </div>
+                     </div>
+                     <img src="img/matteoFerroni.png" class="img-responsive" alt="">
+                     <h4 class="service-heading">Matteo FERRONI<br><small>PhD Candidate in Computer Engineering</small></h4>
+                  </a>
+				  <h6 class="service-heading">[ <a href="https://www.linkedin.com/profile/view?id=170701079&authType=NAME_SEARCH&authToken=_UON&locale=it_IT&trk=tyah2&trkInfo=idx%3A1-1-1%2CtarId%3A1424262283639%2Ctas%3Amatteo+ferroni">LINKEDIN</a> ]</h6>
+               </div>
+
+
+
+               <div class="col-sm-4 portfolio-item">
+                  <a class="portfolio-link" data-toggle="modal">
+                     <div class="caption">
+                        <div class="caption-content">
+                        	<i>iOS Apps & Embedded Systems</i>
+                        </div>
+                     </div>
+                     <img src="img/alessandroNacci.png" class="img-responsive" alt="">
+                     <h4 class="service-heading">Alessandro A. NACCI<br><small>PhD Candidate in Computer Engineering</small></h4>
+                  </a>
+				  <h6 class="service-heading">[ <a href="https://www.linkedin.com/profile/view?id=73183102&authType=NAME_SEARCH&authToken=EXuX&locale=it_IT&trk=tyah2&trkInfo=idx%3A1-1-1%2CtarId%3A1424262267892%2Ctas%3Aalessandro">LINKEDIN</a> ]</h6>
+               </div>               
+
+
+
             </div>
          </div>
       </div>
    </section>
+
    <!-- Mission Section -->
    <section id="mission" class="text-center">
       <div class="download-section">
