--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div class="hero-slider">
 			<ul class="slides">
 
-				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img2.JPG);">
+				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img2.jpg);">
 					<div class="hs-caption" style="top: -62.4833351140852px; display: table; opacity: 0.566560669263276;">
 						<div class="caption-content">
 							<img src="photos/logo_BN_white_back.png" height="128" width="128">
@@ -74,7 +74,7 @@
 					</div>
 				</li>
 
-				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img3.JPG);">
+				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img3.jpg);">
 					<div class="hs-caption" style="top: -62.4833351140852px; display: table; opacity: 0.566560669263276;">
 						<div class="caption-content">
 							<img src="photos/logo_BN_white_back.png" height="128" width="128">
@@ -87,7 +87,7 @@
 					</div>
 				</li>
 
-				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img4.JPG);">
+				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img4.jpg);">
 					<div class="hs-caption" style="top: -62.4833351140852px; display: table; opacity: 0.566560669263276;">
 						<div class="caption-content">
 							<img src="photos/logo_BN_white_back.png" height="128" width="128">
@@ -100,7 +100,7 @@
 					</div>
 				</li>
 
-				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img1.JPG);">
+				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img1.jpg);">
 					<div class="hs-caption" style="top: -62.4833351140852px; display: table; opacity: 0.566560669263276;">
 						<div class="caption-content">
 							<img src="photos/logo_BN_white_back.png" height="128" width="128">
@@ -141,18 +141,7 @@
 
 				</div><!-- .row -->
 
-				<div class="row">
-
-					<div class="col-sm-2 col-sm-offset-5">
-
-						<div class="large-text align-center">
-							<a href="http://www.mycookroom.ru/mywork/Rival/Rival-v1.3/Site/mp-index-3.html#features" class="section-scroll"><i class="fa fa-angle-down"></i></a>
-						</div>
-
-					</div>
-
-				</div>
-
+				
 			</div><!-- .container -->
 		</section>
 		<!-- About end -->
