--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="hero-slider">
 			<ul class="slides">
 
-				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img2.jpg);">
+				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img2-lo.jpg);">
 					<div class="hs-caption" style="top: -62.4833351140852px; display: table; opacity: 0.566560669263276;">
 						<div class="caption-content">
 							<img src="photos/logo_BN_white_back.png" height="128" width="128">
@@ -85,7 +85,7 @@
 					</div>
 				</li>
 
-				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img3.jpg);">
+				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img3-lo.jpg);">
 					<div class="hs-caption" style="top: -62.4833351140852px; display: table; opacity: 0.566560669263276;">
 						<div class="caption-content">
 							<img src="photos/logo_BN_white_back.png" height="128" width="128">
@@ -98,7 +98,7 @@
 					</div>
 				</li>
 
-				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img4.jpg);">
+				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img4-lo.jpg);">
 					<div class="hs-caption" style="top: -62.4833351140852px; display: table; opacity: 0.566560669263276;">
 						<div class="caption-content">
 							<img src="photos/logo_BN_white_back.png" height="128" width="128">
@@ -111,7 +111,7 @@
 					</div>
 				</li>
 
-				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img1.jpg);">
+				<li class="bg-dark-30 bg-dark flex-active-slide" style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; background-image: url(photos/img1-lo.jpg);">
 					<div class="hs-caption" style="top: -62.4833351140852px; display: table; opacity: 0.566560669263276;">
 						<div class="caption-content">
 							<img src="photos/logo_BN_white_back.png" height="128" width="128">
