--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 								<img src="./img/matteo.jpg" alt="">
 								<div class="team-detail">
 									<h5 class="font-alt"></h5>
-									<p class="font-serif">I love technolgy, complex infrastructure, and code tidiness. Ah, and questions, the deep understanding of reality.</p>
+									<p class="font-serif">I love technology, complex infrastructure, and code tidiness. Ah, and questions, the deep understanding of reality.</p>
 									<div class="team-social">
 										<a href="https://www.facebook.com/matt.ferroni"><i class="fa fa-facebook"></i></a>
 										<a href="https://it.linkedin.com/in/matteoferroni/it"><i class="fa fa-linkedin"></i></a>
