--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 									<p class="font-serif">If I were a Tarantino character, I'd be Mr. W. Wolf: I solve problems. Accurately, fast, on time.</p>
 									<div class="team-social">
 										<a href="https://www.facebook.com/alessandro.nacci"><i class="fa fa-facebook"></i></a>
-										<a href="https://it.linkedin.com/in/alenacci/it"><i class="fa fa-linkedin"></i></a>
+										<a href="https://it.linkedin.com/in/anacci"><i class="fa fa-linkedin"></i></a>
 									</div>
 								</div>
 							</div>
