--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							<br>
 							<br>
 							<div class="hs-title-size-2 font-alt mb-30">
-								We futurepoof your <b>novel</b> technology
+								We future-proof your <b>next</b> technology
 							</div>
 						</div>
 					</div>
@@ -198,7 +198,7 @@
 							</p>
 
 							<p>
-							<b>We are your software and hardware artisans.</b>
+							<b>We are your software and hardware craftsmen.</b>
 							</p>
 						</div>
 
@@ -258,7 +258,7 @@
 
 						<h2 class="module-title font-alt">THE TEAM</h2>
 						<div class="module-subtitle font-serif large-text">
-							We met each other as researchers during our PhD in Computer Science and Engineering. We shared the vision of a novel, people-focused business: welcome to our Bottega.
+							We met each other as researchers during our Ph.D. studies in Computer Science and Engineering. We shared the vision of a novel, people-focused business: welcome to our Bottega.
 						</div>
 
 					</div>
@@ -300,7 +300,7 @@
 								<img src="./img/matteo.jpg" alt="">
 								<div class="team-detail">
 									<h5 class="font-alt"></h5>
-									<p class="font-serif">I love technology, complex infrastructure, and code tidiness. Ah, and questions, the deep understanding of reality.</p>
+									<p class="font-serif">I love innovation, complex infrastructures and code tidiness. Ah, and asking questions, for a deep understanding of the world.</p>
 									<div class="team-social">
 										<a href="https://www.facebook.com/matt.ferroni"><i class="fa fa-facebook"></i></a>
 										<a href="https://it.linkedin.com/in/matteoferroni/it"><i class="fa fa-linkedin"></i></a>
@@ -309,7 +309,7 @@
 							</div>
 							<div class="team-descr font-alt">
 								<div class="team-name">Matteo Ferroni</div>
-								<div class="team-role">Backend & Infrastructure Engineer, Co-Founder</div>
+								<div class="team-role">Infrastructure & Backend Engineer, Co-Founder</div>
 							</div>
 						</div>
 
