bottega to home

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="collapse navbar-collapse" id="custom-collapse">
 	
 				<ul class="nav navbar-nav navbar-right">	
-					<li><a href="#">Bottega52</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a href="#whatwedo">What we do</a></li>
 					<li><a href="#theteam">The Team</a></li>
 
