--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 						<div class="font-serif large-text align-center">
 							<p>
-							We listen to you. You have novel ideas, revolutionary projects, and wonderful passions. We love to engage with them, spray some technology and to create with you, as a true partner, the products and services of the future.
+							We listen to you. You have novel ideas, revolutionary projects, and wonderful passions. We love to engage with them, spray some technology and create with you, as a true partner, the products and the services of the future.
 							</p>
 
 							<p>
