added privacy managment

--- a/index.html
+++ b/index.html
@@ -399,4 +399,8 @@
 	<script src="assets/js/contact.js"></script>
 	<script src="assets/js/custom.js"></script>
 </body>
+
+<!--Start Cookie Script-->
+	<script type="text/javascript" charset="UTF-8" src="http://chs02.cookie-script.com/s/7c68097406a33c43006a31e4cd5cc80a.js"></script> <!--End Cookie Script-->
+
 </html>
