--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
 						<br>
 						<p class="copyright font-alt">© 2015 <a href="mailto:info@bottega52.it">Bottega52 SRL - Milano (MI) - Italy</a>
 						<br>Piazza della Vittoria 47, 26900 Lodi (LO), P.IVA/CF 08848340967</p>
+						<p><a target="_blacnk" href="privacy.html">PRIVACY POLICY</a></p>
 						<br>
 					</div>
 		
